--- a/app/assets/stylesheets/common.sass
+++ b/app/assets/stylesheets/common.sass
@@ -682,3 +682,9 @@ span.handle img
 
 .fields .subtitle
   cursor: move
+
+
+// Chosen CSS Override
+.chzn-container .chzn-results li
+  line-height: 15px
+  padding: 4px 7px 4px
