--- a/app/views/contacts/_top_section.html.haml
+++ b/app/views/contacts/_top_section.html.haml
@@ -34,10 +34,9 @@
               %span#account_disabled_title :
 
             -# Add [-- None --] account choice when editing existing contact that has an account.
-            - options = { :selected => @account.id || 0 }
-            - options[:include_blank] = true #t(:select_none) unless @contact.new_record? || @contact.account.blank?
-
-            = collection_select :account, :id, @accounts, :id, :name, options, { :style => "width:330px; display:none;" }
+            - options = {} and (options[:include_blank] = t(:select_none) unless @contact.new_record? || @contact.account.blank?)
+            = account_select(options)
+            
             = a.text_field :name, :style => "width:324px; display:none;"
           %td= spacer
           %td
